ggplot2 0.8.3  (2008-XX-XX)
----------------------------------------

* facet_wrap: contents guaranteed to be clipped to panel